Fixed text wrapping issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,8 @@
     width: 86%;
     height: 3.5rem;
     left: 7%;
-    overflow-y: scroll;
+    overflow: hidden;
+    text-overflow: ellipsis;
     /* background-color: #05e8ba; */
 }
 
@@ -187,6 +188,9 @@
     top: 50%;
     left: 4%;
     transform: translateY(-50%);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     /* background-color: magenta; */
 }
 
